# s3_sandbox

./: README.md  main.py  pyproject.toml
scripts/: bucket_archiver.py  delete_s3.py
tests/: test_s3.py
