[project]
name = "s3-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.12.1",
    "boto3>=1.38.46",
    "botocore>=1.38.46",
    "certifi>=2025.6.15",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "cryptography>=45.0.4",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "jinja2>=3.1.6",
    "jmespath>=1.0.1",
    "markupsafe>=3.0.2",
    "moto>=5.1.6",
    "numpy>=2.3.1",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "pluggy>=1.6.0",
    "pyarrow>=17.0.0",
    "pycparser>=2.22",
    "pygments>=2.19.2",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "responses>=0.25.7",
    "ruff>=0.12.1",
    "s3transfer>=0.13.0",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "typing-extensions>=4.14.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "xmltodict>=0.14.2",
]
